[gd_scene load_steps=3 format=3 uid="uid://qsaqcp2ja7qw"]

[ext_resource type="Script" uid="uid://didiesfapf1kl" path="res://scripts/gameplay/Tower.gd" id="1_cqx8d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dw85p"]

[node name="Tower" type="Node2D"]
script = ExtResource("1_cqx8d")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_dw85p")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
